force-app/main/default/objects/Feature_Flag__mdt/Feature_Flag__mdt.object-meta.xml
<CustomObject><label>Feature Flag</label><pluralLabel>Feature Flags</pluralLabel><visibility>Public</visibility></CustomObject>