force-app/main/default/objects/Feature_Flag__mdt/fields/Plan__c.field-meta.xml
<CustomField><fullName>Plan__c</fullName><externalId>false</externalId><fieldManageability>DeveloperControlled</fieldManageability><label>Plan</label><length>255</length><required>false</required><type>Text</type><unique>false</unique></CustomField>